@@ -604,6 +604,16 @@ public abstract class BaseDaoImpl<T, ID> implements Dao<T, ID> {
 		}
 	}
 
+	public <UO> GenericRawResults<UO> queryRaw(String query, DatabaseResultsMapper<UO> mapper, String... arguments)
+			throws SQLException {
+		checkForInitialized();
+		try {
+			return statementExecutor.queryRaw(connectionSource, query, mapper, arguments, objectCache);
+		} catch (SQLException e) {
+			throw SqlExceptionUtil.create("Could not perform raw query for " + query, e);
+		}
+	}
+
 	public long queryRawValue(String query, String... arguments) throws SQLException {
 		checkForInitialized();
 		DatabaseConnection connection = connectionSource.getReadOnlyConnection();
