@@ -21,6 +21,7 @@
 	* CORE: Fixed finding of get/set/is methods if not in English locale.  Thanks to ChristianRuppert.  Bug #191. 
 	* CORE: Fixed bug with Doa.createOrUpdate(...) and custom id types.  Thanks much to lstrzelecki.  Bug #193. 
 	* CORE: Added support for Joda DateTime to be able to be a version field.  Thanks much to outofrange.
+	* CORE: Added support for raw queries using the DatabaseResults in the mapper.  Thanks much to nonameplum.
 	* JDBC: Possibly fixed some problems with the Oracle type with better boolean support.  Thanks to 51mon.
 	* JDBC: Added support for UUID database fields for Postgres and MSSQL.  Thanks to tsharp.
 	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
